# robocup-at-home-2021-challenge

./: Dockerfile  Dockerfile_test.nvidia  README.md  docker-compose.yml  install.sh  run.sh  start_simulator_GPU.sh
YOLO_training/: README.md  install.sh
YOLO_training/darknet_config/: obj.data  test.txt
YOLO_training/yolo/: install.sh
notebooks/: 4_arm.ipynb  5_recognition.ipynb
notebooks/.ipynb_checkpoints/: 4_arm-checkpoint.ipynb  5_recognition-checkpoint.ipynb
src/: Makefile_darknet_CPU  install.sh
src/robobreizh/: CMakeLists.txt  package.xml
src/robobreizh/cfg/: ros_eigen_params.cfg  ros_eigen_params2.cfg
src/robobreizh/include/robobreizh/: grasp_detection_server.h
src/robobreizh/launch/: challenge.launch  demo.launch  go_and_get_it.launch  run.launch  test_nav.launch
src/robobreizh/msg/: CloudIndexed.msg  DetectedObj.msg  GraspConfigList.msg  GraspServerRequest.msg
src/robobreizh/scripts/: clean_up.py  clean_upV2.py  clean_up_proposal.py  drawer_opener.py  go_and_get_it.py  move.py  obj_yolo.xml  objects.py  objects_list.txt  open_drawers.py  test_vision.py  utils.py  vision.py  xml_utils.py
src/robobreizh/scripts/Grasping/: grasp_metrics.py  grasping.py  grasping_node.py  mesh_to_grasps.py  requirements.txt
src/robobreizh/scripts/Vision/: 8_Vision+Grasping.ipynb  clustering.py  detection_node.py  utils.py  vision.py
src/robobreizh/scripts/Vision/.ipynb_checkpoints/: 8_Vision+Grasping-checkpoint.ipynb
src/robobreizh/src/robobreizh/: grasp_detection_server.cpp  grasp_detection_server2.cpp  grasp_plotter.cpp
src/robobreizh/srv/: detect_grasps.srv  grasping.srv  object_detection.srv
